# ARES

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ares/: __init__.py  main.py
ares/config/: __init__.py  assets_config.py  base_config.py  build_config.py  compiler_config.py  config.py  config_manager.py  config_types.py  engine_config.py  logging_config.py  package_config.py  project_config.py
ares/config/ini/: __init__.py  assets.ini  compiler.ini  logging.ini  project.ini
ares/config_files/: __init__.py  build.ini  engine.ini  pkg_data.ini
ares/core/: __init__.py  input.py  window.py
ares/hooks/: __init__.py  ares_hook.py  configs_hook.py  cython_hook.py  hook_ares.py  hook_manager.py  hook_runtime_logging.py  hook_sdl2.py  hook_type.py  logging_hook.py  sdl2_hook.py
ares/ini/: build.ini  compiler.ini  engine.ini  logging.ini  package.ini  project.ini
ares/math/: __init__.py  matrix.c  matrix.pxd  matrix.pyx  vector.c  vector.pxd  vector.pyx
ares/physics/: __init__.py  collision.c  collision.pxd  collision.pyx
ares/renderer/: __init__.py  renderer.py  vulkan.py
ares/spec/: executable.spec
ares/utils/: __init__.py  build_engine.py  build_ext_ninja.py  build_utils.py  const.py  constants.py  debug_utils.py  log.py  paths.py  utils.py
ares/utils/cli/: __init__.py  help.py  parser.py  router.py
ares/utils/cli/command/: __init__.py  build_cmd.py  clean_cmd.py  cmd_type.py  command.py
ares/utils/compile/: __init__.py  cmodule_compiler.py  cmodule_manager.py  compile_utils.py  ext_manager.py  ninja_compiler.py  utils.py
ares/utils/debug/: __init__.py  utils.py
ares/utils/hook/: __init__.py  ares_hook.py  configs_hook.py  cython_hook.py  hook_manager.py  hook_type.py  logging_hook.py  sdl2_hook.py
ares/utils/spec/: __init__.py  exe.spec  exe_spec.py  spec.py
docs/: Specification.md
examples/: hello_world.py
examples/hello_world/: hello_world.py  main.py
