[build-system]
requires = ["setuptools>=77.0.3", "wheel>=0.41.0", "cython>=3.0.0", "ninja>=1.11.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ares"
version = "0.1.0"
description = "A cross-platform Vulkan game engine with Cython GPU acceleration"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "k. rawson", email = "rawsonkara@gmail.com"}
]
maintainers = [
    {name = "k. rawson", email = "rawsonkara@gmail.com"}
]
keywords = ["game-engine", "vulkan", "cython", "gpu", "acceleration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: Apache Software License 2.0",
]

dependencies = [
    "appdirs>=1.4.4",
    "wheel>=0.41.0",
    "ninja>=1.11.1",
    "pyinstaller>=5.13.0",
    "cython>=3.0.0",
    "pysdl2>=0.9.14",
    "pysdl2-dll>=2.26.0",
    "vulkan>=1.3.236",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0"
]

[project.urls]
"Homepage" = "https://github.com/naxzyu/ares-engine"
"Bug Tracker" = "https://github.com/naxzyu/ares-engine/issues"
"Repository" = "https://github.com/naxzyu/ares-engine.git"

[tool.setuptools]
packages = ["ares"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"ares" = ["*.py", "*.pyi", "*.pyx", "*.pxd"]
"ares.hooks" = ["*.py"]
"ares.config.ini" = ["*.ini"]
"ares.core" = ["*.pyd", "*.so", "*.cp*-*.pyd", "*.cpython-*.so"]
"ares.math" = ["*.pyd", "*.so", "*.cp*-*.pyd", "*.cpython-*.so"] 
"ares.physics" = ["*.pyd", "*.so", "*.cp*-*.pyd", "*.cpython-*.so"]
"ares.renderer" = ["*.pyd", "*.so", "*.cp*-*.pyd", "*.cpython-*.so"]
"ares.utils" = ["spec/*.spec"]  

[tool.setuptools.package-dir]
"ares" = "ares"

[project.scripts]
ares = "ares.main:main"
